--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-.leaflet-container{
-    height: 850px
+.leaflet-container {
+    height: 800px;
 }
 .modal-content, .offcanvas {
     background-color:#9da5a8;
